# scsv

./: .gitignore  README.md  poetry-requirements.txt  pyproject.toml  scsv.py  test.scsv
.github/workflows/: ci.yml
scsv/: __init__.py  __main__.py  parser.py
tests/: override.csv  test.csv  test_parse.py
