[tool.poetry]
name = "scsv"
version = "0.1.0"
description = "Structured CSV parser"
authors = ["Andrew Wason <rectalogic@rectalogic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
mypy = "^0.982"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".mypy_cache", "__pycache__"]
log_level = "DEBUG"
addopts = [
    "--doctest-modules",
    # Broken importlib in 7.1.3 https://github.com/pytest-dev/pytest/issues/10341
    #"--import-mode=importlib",
]

[tool.black]
target-version = ["py310"]
line-length = 108

[tool.isort]
profile = "black"
line_length = 108

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
